// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiMenuButton /> menu closed 1`] = `
<div
  className="dropdown btn-group btn-group-success"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-success"
    disabled={false}
    id="multi-menu-dropdown"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    My Menu
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="multi-menu-dropdown"
    className="dropdown-menu"
    role="menu"
  />
</div>
`;

exports[`<MultiMenuButton /> menu open with current subMenu 1`] = `
<DropdownButton
  bsStyle="success"
  id="multi-menu-dropdown"
  onToggle={[Function]}
  title="Test Open Menu"
>
  first
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
    key="d"
  />
  second
  third
</DropdownButton>
`;

exports[`<MultiMenuButton /> menu open with current subMenu and choice 1`] = `
<DropdownButton
  bsStyle="success"
  id="multi-menu-dropdown"
  onToggle={[Function]}
  title="Test Open Menu with SubMenu choice"
>
  first:test first
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
    key="d"
  />
  second
  third
</DropdownButton>
`;
